디바이스 페이징&검색